--- a/css/style.css
+++ b/css/style.css
@@ -326,14 +326,6 @@ button.btnPost:hover {
   font-size: 1em;
 }
 
-
-
-
-
-
-
-
-
 /* -- RODAPE -- */
 footer {
   width:100%;
@@ -399,7 +391,7 @@ nav ul li a {
     justify-content: center;
     font-size: 0.8em;
   }
-  main aside img{
+  .sumir{
       display: none;
     }
   main article section{
