--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,11 @@ main aside img{
   height: 22em;
   margin: 2em 0;
 }
+.cover{
+  width: 384px;
+  height: 389px;
+  object-fit: none;
+}
 
 main article section{
   width: 80%;
@@ -278,19 +283,41 @@ button.btnPost:hover {
 
 /* CSS PAGINA CURSOS */
 .titleRs{
-  width: 10em;
+  width: 11em;
   font-size: 2em;
   color: var(--colorPrimary);
   padding-bottom: 1em;
   padding-top: 2em;
 }
 
-.dividir {
-    width: 90%;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    height: 5px;
-    background: var(--colorDivisor)
+.linha {
+  
+  /* margin-left: 2em; */
+}
+
+.wrapp{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.video{
+  width: 450px;
+
+}
+.areaVideo{
+  position: relative;
+  height: 0;
+  padding: 0em 0em 56.25%;
+}
+.areaVideo iframe{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 
@@ -304,11 +331,12 @@ button.btnPost:hover {
   color: var(--colorSegundary);
   padding-bottom: 1em;
   padding-top: 2em;
-}
+} 
+
 
 .mediumTitle {
-    width: 20em;
-    font-weight: 400;
+    width: 23em;
+    font-weight: 300;
     font-size: 1em;
     padding-bottom: 2em;
     color: var(--colorText);
@@ -381,12 +409,17 @@ font-weight: 700;
 nav ul li a {
   font-weight: 400;
 }
+@media only screen and (max-width:413px){
+  .video{
+  width: 380px;
 
+}
+}
 @media only screen and (max-width:630px) {
   header  {
     display: flex;
     flex-wrap:wrap;
-    
+    flex-direction: column;
     text-align: center;
     justify-content: center;
     font-size: 0.8em;
@@ -395,21 +428,22 @@ nav ul li a {
       display: none;
     }
   main article section{
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      margin: 2em ;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 2em ;
   }
   footer {
-      width: 100%;
-      margin:0 auto;
-      height: 20em;
-      font-size: 0.8em;
-      padding: 1em 0;
-        
-      display:flex;
-      flex-wrap: wrap;
-      text-align: center;
+    width: 100%;
+    margin:0 auto;
+    height: 20em;
+    font-size: 0.8em;
+    padding: 1em 0;
+      
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
         
   }
   .btnFooter{
@@ -418,5 +452,10 @@ nav ul li a {
       text-align: center;
       padding-top: 0.5em; 
     }
+} 
 
-}  
+@media only screen and (max-width:762px){
+  .sumir{
+    display: none;
+  }
+}
